--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -4,10 +4,10 @@
   "version": "1.0",
   "description": "Add the reading time to Chrome Extension documentation articles",
   "icons": {
-    "16": "images/icon-16.png",
-    "32": "images/icon-32.png",
-    "48": "images/icon-48.png",
-    "128": "images/icon-128.png"
+    "16": "images/Nf-small-16.png",
+    "32": "images/Nf-small-32.png",
+    "48": "images/Nf-small-48.png",
+    "128": "images/Nf-small-128.png"
   },
   "action": {
     "default_popup": "popup.html",
